# On-Device-Retrieval-Augmented-Assistant

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/eval/: eval_queries.jsonl
data/sample_docs/: edge_rag_overview.md  quantization_notes.md
scripts/: smoke_api.sh
src/on_device_assistant/: __init__.py  __main__.py  api.py  assistant.py  benchmarking.py  cli.py  config.py  embeddings.py  generator.py  quantization.py  reranker.py  schemas.py  storage.py  text.py  vector_store.py
tests/: test_assistant.py  test_benchmarking.py  test_text.py
