[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "on-device-retrieval-augmented-assistant"
version = "0.1.0"
description = "An on-device retrieval-augmented assistant with local embeddings, Chroma retrieval, SQLite metadata, reranking, FastAPI, and ONNX quantization tooling."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Venkata Yedupati" }]
keywords = ["rag", "fastapi", "chromadb", "sentence-transformers", "onnx", "pytorch", "sqlite"]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "chromadb>=0.5.5",
  "fastapi>=0.111.0",
  "langchain-text-splitters>=0.2.2",
  "numpy>=1.26.0",
  "onnx>=1.16.0",
  "onnxruntime>=1.18.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pypdf>=4.2.0",
  "python-multipart>=0.0.9",
  "rich>=13.7.1",
  "sentence-transformers>=3.0.1",
  "torch>=2.3.0",
  "transformers>=4.42.0",
  "typer>=0.12.3",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0"
]

[project.scripts]
odra = "on_device_assistant.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/on_device_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]
